--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -22,8 +22,8 @@
     </repositories>
 
     <build>
-        <sourceDirectory>src/main/kotlin</sourceDirectory>
-        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
+        <sourceDirectory>../src/main/kotlin</sourceDirectory>
+        <testSourceDirectory>../src/test/kotlin</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
